# ai-financial-advisor

./: README.md  index.html  package-lock.json
backend/: ai_service.py  auth.py  database.py  main.py  models.py  nlp_service.py  pyproject.toml  requirements.txt  schemas.py
frontend/: README.md
frontend/src/components/: AIAdvisor.tsx  AddTransactionForm.tsx  AuthForm.tsx  Dashboard.tsx  DashboardStats.tsx  ExpenseChart.tsx  ExpenseTracking.tsx  Navigation.tsx  RecentTransactions.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
src/: index.css
src/components/: AIAdvisor.tsx  AIForecasting.tsx  AIInsights.tsx  Analytics.tsx  Dashboard.tsx  DashboardStats.tsx  ExpenseChart.tsx  ExpenseTracking.tsx  Navigation.tsx  QuickActions.tsx  RecentTransactions.tsx  Reports.tsx
src/pages/: Index.tsx
